--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,28 @@
 blinker==1.9.0
+boto3==1.42.0
+botocore==1.41.6
 click==8.1.8
 coverage==7.10.7
 exceptiongroup==1.3.1
 Flask==3.1.2
--e git+https://github.com/djones1117/flask-blog.git@6838edddf7c07dad9c47d8aad2f27cf22a4a552d#egg=flaskr
+-e git+https://github.com/djones1117/flask-blog.git@2dc91ce0dc5e7a7654b61e9e8539d4f8233aa09d#egg=flaskr
 gunicorn==23.0.0
 importlib_metadata==8.7.0
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
 MarkupSafe==3.0.3
 packaging==25.0
 pluggy==1.6.0
 Pygments==2.19.2
 pytest==8.4.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+s3transfer==0.16.0
+six==1.17.0
 tomli==2.3.0
 typing_extensions==4.15.0
+urllib3==1.26.20
 Werkzeug==3.1.4
 zipp==3.23.0
